--- a/css/common.css
+++ b/css/common.css
@@ -201,3 +201,40 @@ a {
 .form-button:hover {
   background-color: #6c8cff;
 }
+
+/* task-5 */
+.widget {
+  border-radius: 8px;
+  padding: 100px 88px;
+  margin: 0 auto;
+  width: 345px;
+  height: 280px;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.color {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+.change-color {
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 148px;
+  height: 40px;
+  cursor: pointer;
+  background: #4e75ff;
+  border: none;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
